--- a/app/system/modules/theme/less/uikit/icon.less
+++ b/app/system/modules/theme/less/uikit/icon.less
@@ -9,6 +9,9 @@
 
 @icon-font-path:                                "../../../../../vendor/assets/uikit/fonts";
 
+@icon-small-font-size:                          170%;
+@icon-small-vertical-align:                     -13%;
+
 @icon-hover-color:                              @global-muted-color;
 @icon-hover-hover-color:                        @global-color;
 
