--- a/app/system/modules/theme/less/uikit/utility.less
+++ b/app/system/modules/theme/less/uikit/utility.less
@@ -7,8 +7,11 @@
 // Variables
 // ========================================================================
 
-@utility-container-padding-horizontal:          @global-grid-gutter;
-@utility-container-large-padding-horizontal:    @global-grid-gutter-large;
+@utility-container-max-width:                   1200px;
+@utility-container-padding-horizontal:          25px;
+
+@utility-container-large-max-width:             @utility-container-max-width;
+@utility-container-large-padding-horizontal:    60px;
 
 @utility-align-horizontal:                      @global-margin;
 @utility-align-vertical:                        @global-margin;
