--- a/app/system/modules/theme/less/uikit/overlay.less
+++ b/app/system/modules/theme/less/uikit/overlay.less
@@ -28,6 +28,12 @@
 }
 
 
+// Sub-object `uk-overlay-image`
+// ========================================================================
+
+.hook-overlay-image() {}
+
+
 // Sub-object `uk-overlay-icon`
 // ========================================================================
 
