fixed fonts path

--- a/themes/alpha/less/uikit/icon.less
+++ b/themes/alpha/less/uikit/icon.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@icon-font-path:                                "../../../vendor/assets/uikit/fonts";
+@icon-font-path:                                "../../../../../vendor/assets/uikit/fonts";
 
 @icon-hover-color:                              @global-muted-color;
 @icon-hover-hover-color:                        @global-color;
