--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -337,7 +337,7 @@
     margin: 4px 0 0 5px;
     width: 10px;
     height: 20px;
-    background: url("../../../assets/images/nestable-handle.svg") 0 0 no-repeat;
+    background: url("../../assets/images/nestable-handle.svg") 0 0 no-repeat;
 }
 
 .pk-nestable-handle:hover { cursor: move; }
