--- a/app/system/modules/theme/less/uikit/button.less
+++ b/app/system/modules/theme/less/uikit/button.less
@@ -12,10 +12,10 @@
 @button-small-height:                           @global-height-small;
 @button-large-height:                           @global-height-large;
 
-@button-line-height:                            @global-height - 2;
-@button-mini-line-height:                       @global-height-mini - 2;
-@button-small-line-height:                      @global-height-small - 2;
-@button-large-line-height:                      @global-height-large - 2;
+@button-line-height:                            @global-height;
+@button-mini-line-height:                       @global-height-mini;
+@button-small-line-height:                      @global-height-small;
+@button-large-line-height:                      @global-height-large;
 
 @button-mini-font-size:                         round((@global-font-size * 0.85)); // 12px / 14px
 @button-small-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
@@ -66,7 +66,10 @@
 // Component
 // ========================================================================
 
-.hook-button() { border-radius: @global-border-radius; }
+.hook-button() {
+    border-radius: @global-border-radius;
+    text-transform: uppercase;
+}
 
 .hook-button-hover() {}
 
