--- a/app/system/modules/editor/app/components/link/modal.html
+++ b/app/system/modules/editor/app/components/link/modal.html
@@ -1,16 +1,16 @@
 <div class="uk-modal">
     <div class="uk-modal-dialog uk-form uk-form-stacked">
-        <h1 class="uk-h3"><?= __('Add Link') ?></h1>
+        <h1 class="uk-h3">{{ 'Add Link' }}</h1>
         <div class="uk-form-row">
-            <label for="form2-title" class="uk-form-label"><?= __('Title') ?></label>
+            <label for="form2-title" class="uk-form-label">{{ 'Title' }}</label>
             <div class="uk-form-controls">
                 <input id="form2-title" type="text" class="js-title uk-width-1-1">
             </div>
         </div>
         <div class="js-linkpicker uk-form-row"></div>
         <div class="uk-form-row">
-            <button class="js-update uk-button uk-button-primary" type="button"><?= __('Update') ?></button>
-            <button class="uk-button uk-modal-close" type="button"><?= __('Cancel') ?></button>
+            <button class="js-update uk-button uk-button-primary" type="button">{{ 'Update' }}</button>
+            <button class="uk-button uk-modal-close" type="button">{{ 'Cancel' }}</button>
         </div>
     </div>
 </div>
