--- a/app/system/modules/theme/less/uikit/navbar.less
+++ b/app/system/modules/theme/less/uikit/navbar.less
@@ -9,13 +9,12 @@
 
 @navbar-background:                             #3a94e0;
 @navbar-color:                                  @global-contrast-color;
-@navbar-link-color:                             rgba(255,255,255,0.7);
+@navbar-link-color:                             rgba(255,255,255,0.6);
 @navbar-link-hover-color:                       @global-contrast-color;
 
-@navbar-nav-height:                             40px;
-@navbar-nav-line-height:                        30px;
-@navbar-nav-padding-horizontal:                 30px;
-@navbar-nav-color:                              rgba(255,255,255,0.7);
+@navbar-nav-height:                             48px;
+@navbar-nav-padding-horizontal:                 24px;
+@navbar-nav-color:                              rgba(255,255,255,0.6);
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-font-weight:                        300;
 @navbar-nav-font-family:                        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -73,8 +72,8 @@
     .uk-navbar-nav > .uk-active:after {
         content: "";
         position: absolute;
-        left: 15px;
-        right: 15px;
+        left: 0;
+        right: 0;
         bottom: 0;
         border-bottom: 2px solid #f0f657;
     }
