added form advanced component to admin uikit theme

--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -4,6 +4,7 @@
 @import "../../../../../../vendor/assets/uikit/less/uikit.less";
 
 // Components: Common
+@import "../../../../../../vendor/assets/uikit/less/components/form-advanced.less";
 @import "../../../../../../vendor/assets/uikit/less/components/form-file.less";
 @import "../../../../../../vendor/assets/uikit/less/components/form-password.less";
 @import "../../../../../../vendor/assets/uikit/less/components/form-select.less";
@@ -72,6 +73,7 @@
 @import "utility.less";
 
 // Components: Common
+@import "form-advanced.less";
 @import "form-password.less";
 
 // Components: JavaScript
