--- a/app/system/modules/theme/less/uikit/table.less
+++ b/app/system/modules/theme/less/uikit/table.less
@@ -44,7 +44,7 @@
         font-size: round((@global-font-size * 0.85)); // 12px / 14px
         text-transform: uppercase;
         font-weight: normal;
-        color: #999;
+        color: @global-muted-color;
     }
 
     .uk-table :not(:first-child) > th { padding-top: @table-padding-vertical + @global-margin; }
