added subtle animations to navbar and table hover

--- a/app/system/modules/theme/less/uikit/table.less
+++ b/app/system/modules/theme/less/uikit/table.less
@@ -57,4 +57,9 @@
 
     .uk-table-condensed th { padding: @table-condensed-padding-vertical @table-condensed-padding-horizontal; }
 
+    .uk-table tbody tr {
+        -webkit-transition: background-color 0.1s linear;
+        transition: background-color 0.1s linear;
+    }
+
 }
