--- a/app/system/modules/theme/less/uikit/navbar.less
+++ b/app/system/modules/theme/less/uikit/navbar.less
@@ -46,6 +46,8 @@
 .hook-navbar-nav() {
     text-transform: uppercase;
     letter-spacing: 1px;
+    -webkit-transition: color 0.1s linear;
+    transition: color 0.1s linear;
 }
 
 // Hover
