more subtle animations

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -71,6 +71,8 @@ html { overflow-y: scroll; }
     .tm-icon-menu {
         margin-right: 28px;
         color: rgba(255,255,255,0.6);
+        -webkit-transition: color 0.05s linear;
+        transition: color 0.05s linear;
     }
 
     .tm-headerbar-primary:hover .tm-icon-menu,
