--- a/app/system/modules/theme/less/uikit/icon.less
+++ b/app/system/modules/theme/less/uikit/icon.less
@@ -30,7 +30,10 @@
 // Modifier: `uk-icon-hover`
 // ========================================================================
 
-.hook-icon-hover() {}
+.hook-icon-hover() {
+	-webkit-transition: color 0.05s linear;
+    transition: color 0.05s linear;
+}
 
 .hook-icon-hover-hover() {}
 
