--- a/app/system/modules/finder/app/components/table.html
+++ b/app/system/modules/finder/app/components/table.html
@@ -26,7 +26,7 @@
                 </td>
                 <td class="pk-table-text-break pk-table-min-width-200">{{ name }}</td>
                 <td class="uk-text-right uk-text-nowrap">{{ size }}</td>
-                <td class="uk-text-nowrap">{{ lastmodified }}</td>
+                <td class="uk-text-nowrap">{{ lastmodified | date medium }}</td>
             </tr>
 
         </tbody>
