updated user index markup: action buttons, search and title

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -26,7 +26,17 @@
 .pk-badge:hover { color: @global-muted-color; }
 
 
-/* Modifier `pk-badge`
+/* Modifier `pk-search`
+========================================================================== */
+
+.pk-search {
+    margin-left: 25px;
+    padding-left: 15px;
+    border-left: 1px solid @global-border;
+}
+
+
+/* Modifier `pk-breadcrumb`
 ========================================================================== */
 
 .pk-breadcrumb {
