--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -16,6 +16,7 @@
 @import "../../../../../../vendor/assets/uikit/less/components/datepicker.less";
 @import "../../../../../../vendor/assets/uikit/less/components/htmleditor.less";
 @import "../../../../../../vendor/assets/uikit/less/components/notify.less";
+@import "../../../../../../vendor/assets/uikit/less/components/search.less";
 @import "../../../../../../vendor/assets/uikit/less/components/nestable.less";
 @import "../../../../../../vendor/assets/uikit/less/components/sortable.less";
 @import "../../../../../../vendor/assets/uikit/less/components/sticky.less";
@@ -81,6 +82,7 @@
 @import "datepicker.less";
 @import "htmleditor.less";
 @import "notify.less";
+@import "search.less";
 @import "nestable.less";
 @import "sortable.less";
 @import "sticky.less";
