added css for table filter on hover + active

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -36,6 +36,13 @@
 }
 
 
+/* Modifier `pk-filter`
+========================================================================== */
+
+.pk-filter:hover > *,
+.pk-filter.uk-active > * { color: @text-danger-color; }
+
+
 /* Modifier `pk-breadcrumb`
 ========================================================================== */
 
