updated uikit admin theme: container width + gutter

--- a/app/system/modules/theme/less/uikit/variables.less
+++ b/app/system/modules/theme/less/uikit/variables.less
@@ -55,8 +55,8 @@
 
 @global-margin:                                 20px;
 @global-margin-large:                           30px;
-@global-grid-gutter:                            25px;
-@global-grid-gutter-large:                      @global-grid-gutter;
+@global-grid-gutter:                            40px;
+@global-grid-gutter-large:                      70px;
 
 //
 // Controls
