updated admin uikit theme

--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -36,6 +36,7 @@
 // Layout
 @import "grid.less";
 @import "panel.less";
+@import "block.less";
 @import "article.less";
 @import "comment.less";
 
@@ -69,10 +70,6 @@
 @import "offcanvas.less";
 @import "tooltip.less";
 
-// Need to be loaded last
-@import "text.less";
-@import "utility.less";
-
 // Components: Common
 @import "form-advanced.less";
 @import "form-password.less";
@@ -86,3 +83,8 @@
 @import "nestable.less";
 @import "sortable.less";
 @import "sticky.less";
+
+// Need to be loaded last
+@import "text.less";
+@import "utility.less";
+@import "contrast.less";
