updated nav + dropdown in admin uikit theme

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -7,56 +7,60 @@
 // Variables
 // ========================================================================
 
+@nav-padding-vertical:                          6px;
+@nav-padding-horizontal:                        20px;
+
 @nav-header-padding-vertical:                   @nav-padding-vertical;
 @nav-header-padding-horizontal:                 @nav-padding-horizontal;
 @nav-header-font-size:                          round((@global-font-size * 0.85)); // 12px / 14px
 @nav-header-font-weight:                        normal;
 @nav-header-margin-top:                         @global-margin;
 
-@nav-divider-margin-horizontal:                 @nav-padding-horizontal;
+@nav-divider-margin-vertical:                   10px;
+@nav-divider-margin-horizontal:                 0;
 
 @nav-subtitle-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
 @nav-subtitle-line-height:                      round((@nav-subtitle-font-size * 1.46)); // 18px / 20px
 
-@nav-sub-padding-left:                          @nav-padding-horizontal;
+@nav-sub-padding-left:                          (@nav-padding-horizontal + @nav-nested-padding-left);
 
 @nav-parent-icon-width:                         @global-line-height;
 
-@nav-side-color:                                @global-muted-color;
-@nav-side-hover-background:                     #fff;
+@nav-side-color:                                @global-color;
+@nav-side-hover-background:                     @global-default-background;
 @nav-side-hover-color:                          @global-color;
 @nav-side-active-background:                    @global-default-background;
 @nav-side-active-color:                         @global-color;
 @nav-side-header-color:                         @global-color;
 @nav-side-divider-border:                       @global-border;
-@nav-side-nested-color:                         @global-link-color;
-@nav-side-nested-hover-color:                   @global-link-hover-color;
+@nav-side-nested-color:                         @global-muted-color;
+@nav-side-nested-hover-color:                   @global-color;
 
 @nav-dropdown-color:                            @global-color;
-@nav-dropdown-hover-background:                 transparent;
-@nav-dropdown-hover-color:                      @global-link-color;
-@nav-dropdown-header-color:                     @global-muted-color;
+@nav-dropdown-hover-background:                 @global-default-background;
+@nav-dropdown-hover-color:                      @global-color;
+@nav-dropdown-header-color:                     @global-color;
 @nav-dropdown-divider-border:                   @global-border;
-@nav-dropdown-nested-color:                     @global-link-color;
-@nav-dropdown-nested-hover-color:               @global-link-hover-color;
+@nav-dropdown-nested-color:                     @global-muted-color;
+@nav-dropdown-nested-hover-color:               @global-color;
 
 @nav-navbar-color:                              @global-color;
-@nav-navbar-hover-background:                   transparent;
-@nav-navbar-hover-color:                        @global-link-color;
-@nav-navbar-header-color:                       @global-muted-color;
+@nav-navbar-hover-background:                   @global-default-background;
+@nav-navbar-hover-color:                        @global-color;
+@nav-navbar-header-color:                       @global-color;
 @nav-navbar-divider-border:                     @global-border;
-@nav-navbar-nested-color:                       @global-link-color;
-@nav-navbar-nested-hover-color:                 @global-link-hover-color;
+@nav-navbar-nested-color:                       @global-muted-color;
+@nav-navbar-nested-hover-color:                 @global-color;
 
 @nav-offcanvas-color:                           @global-color;
 @nav-offcanvas-hover-background:                #f5f5f5;
 @nav-offcanvas-hover-color:                     @global-color;
 @nav-offcanvas-active-background:               #f5f5f5;
 @nav-offcanvas-active-color:                    @global-color;
-@nav-offcanvas-header-color:                    @global-muted-color;
+@nav-offcanvas-header-color:                    @global-color;
 @nav-offcanvas-divider-border:                  #ddd;
-@nav-offcanvas-nested-color:                    @global-muted-color;
-@nav-offcanvas-nested-hover-color:              @global-muted-color;
+@nav-offcanvas-nested-color:                    @global-color;
+@nav-offcanvas-nested-hover-color:              @global-color;
 
 
 // Sub-object: `uk-nav-header`
@@ -202,9 +206,9 @@
      * Needed because of nav-actions to keep style on hover
      */
 
-    .uk-nav-side > li:hover > a {
+    /*.uk-nav-side > li:hover > a {
         background: @nav-side-hover-background;
         color: @nav-side-hover-color;
-    }
+    }*/
 
 }
