--- a/app/system/modules/theme/less/uikit/dropdown.less
+++ b/app/system/modules/theme/less/uikit/dropdown.less
@@ -8,9 +8,13 @@
 // ========================================================================
 
 @dropdown-z-index:                              @global-z-index + 20;
+@dropdown-margin-top:                           10px;
+@dropdown-padding:                              20px;
 @dropdown-background:                           #fff;
 @dropdown-color:                                @global-color;
 @dropdown-divider-border:                       @global-border;
+
+@dropdown-small-padding:                        @dropdown-padding;
 
 @dropdown-navbar-margin:                        20px;
 @dropdown-navbar-background:                    #fff;
@@ -21,19 +25,22 @@
 // Component
 // ========================================================================
 
-.hook-dropdown() {
-    border-radius: 1px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.25);
-}
+.hook-dropdown() { box-shadow: 0 1px 3px rgba(0,0,0,0.25); }
 
 
 // Modifier: `uk-dropdown-navbar`
 // ========================================================================
 
-.hook-dropdown-navbar() { border-radius: 0; }
+.hook-dropdown-navbar() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-dropdown-misc() {}
+.hook-dropdown-misc() {
+
+    .uk-dropdown > .uk-nav { margin: (10px - @dropdown-padding) (-@dropdown-padding); }
+
+    .uk-dropdown-small > .uk-nav { margin: (10px - @dropdown-small-padding) (-@dropdown-small-padding); }
+
+}
