updated settings nav markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -74,6 +74,15 @@
 }
 
 
+/* Modifier `pk-nav-large`
+========================================================================== */
+
+.pk-nav-large > li > a {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+
 /* Toolbar
 ========================================================================== */
 
