--- a/app/system/modules/theme/less/uikit/modal.less
+++ b/app/system/modules/theme/less/uikit/modal.less
@@ -8,17 +8,24 @@
 // ========================================================================
 
 @modal-z-index:                                 @global-z-index + 10;
-@modal-background:                              rgba(245,245,245,0.8);
+@modal-background:                              rgba(245,245,245,0.5);
 
+@modal-dialog-padding:                          24px;
 @modal-dialog-background:                       @global-background;
 
 @modal-dialog-large-width-large:                1150px;
 
-@modal-header-margin-bottom:                    @global-margin;
+@modal-header-margin-bottom:                    @modal-dialog-padding;
 
-@modal-footer-margin-top:                       @global-margin;
+@modal-footer-margin-top:                       @modal-dialog-padding;
 
 @modal-caption-color:                           @global-contrast-color;
+
+//
+// New
+//
+
+@modal-border-radius:                           1px;
 
 
 // Component
@@ -31,9 +38,8 @@
 // ========================================================================
 
 .hook-modal-dialog() {
-    border: 1px solid @global-border;
-    border-radius: @global-border-radius;
-    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    border-radius: @modal-border-radius;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
 }
 
 
@@ -46,25 +52,13 @@
 // Sub-object: `uk-modal-header`
 // ========================================================================
 
-.hook-modal-header() {
-    margin: (-@modal-dialog-padding) (-@modal-dialog-padding) @modal-header-margin-bottom (-@modal-dialog-padding);
-    padding: @modal-dialog-padding;
-    border-bottom: 1px solid @global-border;
-    border-radius: @global-border-radius @global-border-radius 0 0;
-    background: #fafafa;
-}
+.hook-modal-header() { margin-bottom: @modal-header-margin-bottom; }
 
 
 // Sub-object: `uk-modal-footer`
 // ========================================================================
 
-.hook-modal-footer() {
-    margin: @modal-footer-margin-top (-@modal-dialog-padding) (-@modal-dialog-padding) (-@modal-dialog-padding);
-    padding: @modal-dialog-padding;
-    border-top: 1px solid @global-border;
-    border-radius: 0 0 @global-border-radius @global-border-radius;
-    background: #fafafa;
-}
+.hook-modal-footer() { margin-top: @modal-footer-margin-top; }
 
 
 // Sub-object: `uk-modal-caption`
