--- a/app/system/modules/theme/less/uikit/tooltip.less
+++ b/app/system/modules/theme/less/uikit/tooltip.less
@@ -8,9 +8,9 @@
 // ========================================================================
 
 @tooltip-z-index:                               @global-z-index + 30;
-@tooltip-background:                            #f0f0f0;
+@tooltip-background:                            #747474;
 
-@tooltip-color:                                 @global-color;
+@tooltip-color:                                 @global-contrast-color;
 @tooltip-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
 @tooltip-line-height:                           round((@tooltip-font-size * 1.46)); // 18px / 20px
 
@@ -18,10 +18,30 @@
 // Component
 // ========================================================================
 
-.hook-tooltip() { border-radius: 3px; }
+.hook-tooltip() {
+    border-radius: 3px;
+    opacity: 0;
+    -webkit-transition: opacity 0.15s linear;
+    transition: opacity 0.15s linear;
+}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-tooltip-misc() {}
+.hook-tooltip-misc() {
+
+    .uk-tooltip.uk-active { opacity: 1; }
+
+    .uk-tooltip-top,
+    .uk-tooltip-top-left,
+    .uk-tooltip-top-right { margin-top: -10px; }
+
+    .uk-tooltip-bottom,
+    .uk-tooltip-bottom-left,
+    .uk-tooltip-bottom-right { margin-top: 10px; }
+
+    .uk-tooltip-left { margin-left: -10px; }
+    .uk-tooltip-right { margin-left: 10px; }
+
+}
