--- a/app/system/modules/theme/less/uikit/nestable.less
+++ b/app/system/modules/theme/less/uikit/nestable.less
@@ -9,58 +9,30 @@
 
 @nestable-dragged-z-index:                      @global-z-index + 50;
 
-@nestable-item-margin-bottom:                   0;
-@nestable-item-padding:                         10px;
-@nestable-item-background:                      @global-background;
-
-@nestable-placeholder-border:                   #99baca;
-
-@nestable-empty-height:                         39px;
-
-@nestable-handle-icon:                          "";
-
-@nestable-toggle-icon:                          "\f0d7";
-@nestable-toggle-collapsed-icon:                "\f0da";
+@nestable-placeholder-border:                   @global-border;
 
 
 // Component
 // ========================================================================
 
-.hook-nestable() { margin: 0; }
+.hook-nestable() {}
 
-.hook-nestable-list-dragged() { padding-top: 1px; }
+.hook-nestable-item() {}
 
-.hook-nestable-item() {
-    margin-top: -1px;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-}
+.hook-nestable-dragged() {}
 
-.hook-nestable-placeholder() {
-    margin: -1px 0 0 0;
-    background: #f5fbfe;
-    position: relative;
-}
+.hook-nestable-placeholder() {}
 
-.hook-nestable-empty() { border: 1px dashed #ddd; }
+.hook-nestable-empty() {}
 
-.hook-nestable-handle() {
-	display: inline-block;
-	width: 10px;
-	height: 20px;
-    background: url("../../../../assets/images/nestable-handle-large.svg") 0 0 no-repeat;
-    vertical-align: middle;
-}
+.hook-nestable-handle() {}
 
 .hook-nestable-toggle() {}
+
+.hook-nestable-panel() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-nestable-misc() {
-
-    .uk-nestable-item:hover,
-    .uk-nestable-list-dragged .uk-nestable-item { background: #fff; }
-
-}
+.hook-nestable-misc() {}
