pass params through attributes to components

--- a/app/system/modules/editor/app/components/video/modal.html
+++ b/app/system/modules/editor/app/components/video/modal.html
@@ -25,7 +25,7 @@
 
         <div v-if="view == 'finder'">
             <h1 class="uk-h3">{{ 'Select Video' | trans }}</h1>
-            <div v-component="v-finder" v-ref="finder" v-with="root: finder.root"></div>
+            <v-finder root="{{ finder.root }}" v-ref="finder"></v-finder>
             <div class="uk-margin-top">
                 <button class="uk-button uk-button-primary" type="button" v-attr="disabled: !finder.select" v-on="click: closeFinder(finder.select)">{{ 'Select' | trans }}</button>
                 <button class="uk-button" type="button" v-on="click: closeFinder(false)">{{ 'Cancel' | trans }}</button>
