--- a/app/system/modules/site/app/components/settings.html
+++ b/app/system/modules/site/app/components/settings.html
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<div class="uk-form-row" v-if="type.url">
+<div class="uk-form-row">
     <span class="uk-form-label">{{ 'Options' | trans }}</span>
     <div class="uk-form-controls">
         <label><input type="checkbox" v-model="node.data.frontpage"> {{ 'Frontpage' | trans }}</label>
