removed .pk-filter active state CSS

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -117,8 +117,7 @@
 /* Modifier `pk-filter`
 ========================================================================== */
 
-.pk-filter:hover > *,
-.pk-filter.uk-active > * { color: @text-danger-color; }
+.pk-filter:hover > * { color: @text-danger-color; }
 
 
 /* Modifier `pk-breadcrumb`
