renamed pk-table-sort to pk-table-order

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -276,13 +276,13 @@
 .pk-table-max-width-150 { max-width: 150px; }
 
 
-/* Sub-modifier `pk-table-sort`
+/* Sub-modifier `pk-table-order`
 ========================================================================== */
 
-.pk-table-sort:hover { cursor: pointer; }
+.pk-table-order:hover { cursor: pointer; }
 
-.pk-table-sort:hover,
-.pk-table-sort.uk-active { color: #666; }
+.pk-table-order:hover,
+.pk-table-order.uk-active { color: #666; }
 
 
 /* Sub-modifier `pk-table-fake`
