updated admin dropdown css

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -152,7 +152,10 @@ body {
  * Dropdown with Sortable Icons
  */
 
-.tm-dropdown { width: 350px; }
+.tm-dropdown {
+    padding: 35px;
+    width: 400px;
+}
 
 .tm-sortable-dragged .pk-panel-icon {
     background: @dropdown-background;
