--- a/app/system/modules/theme/less/uikit/utility.less
+++ b/app/system/modules/theme/less/uikit/utility.less
@@ -24,7 +24,7 @@
 @utility-heading-large-font-size:               round((@global-font-size * 3.72)); // 52px / 60px
 @utility-heading-large-line-height:             round((@utility-heading-large-font-size * 1.23)); // 64px / 74px
 
-@utility-link-muted-color:                      @global-color;
+@utility-link-muted-color:                      @global-muted-color;
 @utility-link-muted-hover-color:                @global-color;
 
 @utility-scrollable-box-height:                 200px;
